changes in banana file

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 <body>
     <h1>Lets talk banana</h1>
 
-    <textarea  placeholder=" what ever you type here will be translated  to banana"></textarea>
+    <textarea id="txt-input" placeholder=" what ever you type here will be translated  to banana"></textarea>
     
-    <button>Translate</button>
+    <button id="btn-translate"> Translate</button>
 
     <div id="output">
     </div>
 
+
+    <script src="banana.js" type="text/javascript"
 </body>
 </html>
