--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             width: 90%;
             display: block;
             margin: 1rem;
+            padding: 1rem;
         }
 
         #output{
@@ -18,6 +19,7 @@
             width: 90%;
             display: block;
             margin: 1rem;
+            padding: 1rem;
         }
     </style>
 
